<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/navigation_local">

    <fragment
        android:id="@+id/navigation_local"
        android:name="com.chrisabbod.data_usa.local_statistics.LocalStatisticsFragment"
        android:label="@string/title_local"
        tools:layout="@layout/fragment_local_statistics" />

    <fragment
        android:id="@+id/navigation_state"
        android:name="com.chrisabbod.data_usa.state_statistics.StateStatisticsFragment"
        android:label="@string/title_state"
        tools:layout="@layout/fragment_state_statistics" />

    <fragment
        android:id="@+id/navigation_historical"
        android:name="com.chrisabbod.data_usa.historical_statistics.HistoricalStatisticsFragment"
        android:label="@string/title_historical"
        tools:layout="@layout/fragment_historical_statistics" />

</navigation>